--- a/assets/components/credential.ini
+++ b/assets/components/credential.ini
@@ -1,5 +1,5 @@
 [DB]
-host=localhost
-user=root
-pass=nopass
-db=test_forum
+host=35.154.129.30:8082
+user=kmsbrzkfrj
+pass=Nw8QGnGgDx
+db=kmsbrzkfrj
